--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   material_floating_search_bar: ^0.3.6
   provider: ^6.0.2
+  shared_preferences: ^2.0.13
 #  database: ^0.3.3
 
 
